2012-09-18  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/scimat_blockproc3.m: (v0.1.1)

	- Update syntax to check number of input and output arguments.

	* Add matlab/FiltersToolbox/ccwrap.m: (v0.1.0)

	- Wrapper that enables CTRL+C interruption of MEX files.

	* CMakeLists.txt: (v0.2.1)
	* cpp/src/third-party/boost/boost/chrono/CMakeLists.txt:
	* cpp/src/third-party/boost/boost/date_time/CMakeLists.txt:

	- Add some boost libraries that were dependencies of the ones we
	were using, but were not bing built and linked to.

2012-09-12  Ramon Casero  <rcasero@gmail.com>

	* matlab/GerardusCommon.hpp: (v0.6.0)

	- Add function ctrlcCheckPoint(). This function can be put
	e.g. inside a slow loop in your C++ file, and will exit execution
	with an error if the user presses Ctrl+C.

	Ctrl+C works in Matlab code, but there's no documented way of
	reproducing the same behavious in MEX C++ code. Thanks to Wotao
	Yin, who explains an undocumented function in the Matlab ut
	library that captures the Ctrl+C signal, I could write this
	ctrlcCheckPoint() function.

	http://www.caam.rice.edu/~wy1/links/mex_ctrl_c_trick/

	* matlab/FindMatlab.cmake: (v0.2.5)

	- Find and create variable for the "ut" library. This undocumented
	library contains function utIsInterruptPending(), that returns
	true if the user has pressed Ctrl+C.

	* matlab/CgalToolbox/CgalInSurfaceTriangulation.cpp: (v0.2.1)

	- Add Ctrl+C checkpoints so that the user can stop execution.

	* matlab/CMakeLists.txt: (v0.2.0)
	* matlab/CgalToolbox/CMakeLists.txt: (v0.1.2)
	* matlab/ItkToolbox/CMakeLists.txt: (v0.5.6)

	- GerardusCommon.cpp is now compiled into a dynamic library, and
	Gerardus MEX functions link to it.

2012-09-11  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (v0.3.0)

	- Replace third-party VOXELISE(), that has been deleted from
	Gerardus, by our own cgal_insurftri().

	- We can save a lot of time by not testing voxels that are outside